some changes are there

--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,43 @@
     <link rel="stylesheet" href="Home.css">
 </head>
 <meta name="color-scheme" content="dark light">
+
 <body>
-    <div class="container">
+    <div class="preloader">
         <img src="Music_website/logo.png" alt="PrimeTuneLogo">
         <h1>PrimeTune</h1>
     </div>
-    <div class="Home">
-        <div class="Home-Search">
-        <li>Home</li>
+    <div class="container">
+        <div class="Home">
+            <div class="Home-img">
+                <img src="Music_website/HomeLogo.png" alt="homelogo" herf="Home.php">
+                <li><a href="Home.php">Home</a></li>
+            </div>
+            <div class="Search-img">
+                <img src="Music_website/SearchLogo.png" alt="searchlogo" herf="Home.php">
+                <li><a href="Search.php">Search</a></li>
+            </div>
         </div>
-        <li>Search</li>
+        <div class="body">
+            <div class="body-img">
+                <img src="Music_website/BodyLogo.png" alt="bodylogo">
+                <li><a href="Body.php">Body</a></li>
+            </div>
+            <div class="playlist">
+                <li><a href="playlist.php">Playlist</a></li>
+            </div>
+        </div>
+    </div>
+    <div class="library">
+        <div class="library-img">
+            <img src="Music_website/librarylogo.jpg" alt="librarylogo">
+            <li>Library</li>
+            <li><a herf="Add.php">+</a></li>
+        </div>
+        <div class="Artist">
+            <li><a href="artists.php">Artists</a></li>
+        </div>
     </div>
 </body>
+
 </html>
