some changes are needed

--- a/Home.html
+++ b/Home.html
@@ -15,34 +15,74 @@
         <h1>PrimeTune</h1>
     </div>
     <div class="container">
-        <div class="Home">
-            <div class="Home-img">
-                <img src="Music_website/HomeLogo.png" alt="homelogo" herf="Home.php">
-                <li><a href="Home.php">Home</a></li>
+        <div class="main">
+            <div class="Home">
+                <div class="Home-img">
+                    <img src="Music_website/HomeLogo.png" alt="homelogo" herf="Home.php">
+                    <li><a href="Home.php">Home</a></li>
+                </div>
+                <div class="Search-img">
+                    <img src="Music_website/SearchLogo.png" alt="searchlogo" herf="Home.php">
+                    <li><a href="Search.php">Search</a></li>
+                </div>
             </div>
-            <div class="Search-img">
-                <img src="Music_website/SearchLogo.png" alt="searchlogo" herf="Home.php">
-                <li><a href="Search.php">Search</a></li>
+            <div class="library">
+                <div class="library-img">
+                    <img src="Music_website/librarylogo.jpg" alt="librarylogo">
+                    <li>Library</li>
+                    <li><a herf="Add.php">+</a></li>
+                </div>
+                <div class="Artist">
+                    <li><a href="artists.php">Artists</a></li>
+                </div>
             </div>
         </div>
         <div class="body">
-            <div class="body-img">
-                <img src="Music_website/BodyLogo.png" alt="bodylogo">
-                <li><a href="Body.php">Body</a></li>
+            <h1>Good Evening</h1>
+            <div class="songlist1">
+                <div class="song-img1">
+                    <img src="Music_website/alluarjun.jpg" alt="song1">
+                    <h3>Allu Arjun song</h3>
+                </div>
+                <div class="song-img2">
+                    <img src="Music_website/arjitsingh.jpg" alt="song2">
+                    <li><a href="song2.php">Song2</a></li>
+                </div>
+                <div class="song-img3">
+                    <img src="Music_website/song3.jpg" alt="song3">
+                    <li><a href="song3.php">Song3</a></li>
+                </div>
+                <div class="song-img4">
+                    <img src="Music_website/song4.jpg" alt="song4">
+                    <li><a href="song4.php">Song4</a></li>
+                </div>
+                <div class="song-img5">
+                    <img src="Music_website/song5.jpg" alt="song5">
+                    <li><a href="song5.php">Song5</a></li>
+                </div>
             </div>
-            <div class="playlist">
-                <li><a href="playlist.php">Playlist</a></li>
+            <div class="songlist2">
+                <div class="song-img6">
+                    <img src="Music_website/song6.jpg" alt="song6">
+                    <li><a href="song6.php">Song6</a></li>
+                </div>
+                <div class="song-img7">
+                    <img src="Music_website/song7.jpg" alt="song7">
+                    <li><a href="song7.php">Song7</a></li>
+                </div>
+                <div class="song-img8">
+                    <img src="Music_website/song8.jpg" alt="song8">
+                    <li><a href="song8.php">Song8</a></li>
+                </div>
+                <div class="song-img9">
+                    <img src="Music_website/song9.jpg" alt="song9">
+                    <li><a href="song9.php">Song9</a></li>
+                </div>
+                <div class="song-img10">
+                    <img src="Music_website/song10.jpg" alt="song10">
+                    <li><a href="song10.php">Song10</a></li>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="library">
-        <div class="library-img">
-            <img src="Music_website/librarylogo.jpg" alt="librarylogo">
-            <li>Library</li>
-            <li><a herf="Add.php">+</a></li>
-        </div>
-        <div class="Artist">
-            <li><a href="artists.php">Artists</a></li>
         </div>
     </div>
 </body>
