--- a/Home.html
+++ b/Home.html
@@ -45,16 +45,16 @@
                     <h3>Allu Arjun song</h3>
                 </div>
                 <div class="song-img2">
-                    <img src="Music_website/arjitsingh.jpg" alt="song2">
-                    <li><a href="song2.php">Song2</a></li>
+                    <img src="Music_website/Govyachya-Kinaryav.jpg" alt="song2">
+                    <h3>Govyachya-Kinaryav song</h3>
                 </div>
                 <div class="song-img3">
-                    <img src="Music_website/song3.jpg" alt="song3">
-                    <li><a href="song3.php">Song3</a></li>
+                    <img src="Music_website/sahahrukhkhan.jpg" alt="song3">
+                    <h3>Arman Malik song</h3>
                 </div>
                 <div class="song-img4">
-                    <img src="Music_website/song4.jpg" alt="song4">
-                    <li><a href="song4.php">Song4</a></li>
+                    <img src="Music_website/Darshanraval.jpg" alt="song4">
+                    <h3>Darshan Raval song</h3>
                 </div>
                 <div class="song-img5">
                     <img src="Music_website/song5.jpg" alt="song5">
