--- a/Home.html
+++ b/Home.html
@@ -84,8 +84,40 @@
                     <li><a href="song10.php">Song10</a></li>
                 </div>
             </div>
+            <footer class="footer">
+                <div class="footer-container">
+                    <ul class="inline-list">
+                            <a href="Home.php">Web Development</a>
+                            <a href="Search.php">Development</a>
+                            <a href="Add.php">Hosting</a>
+                    </ul>
+                    <ul class="social-icon">
+                        <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/" target="_blank"><img src="Music_website/twitter_logo.png" alt="Twitter"></a>
+                        <a href="https://www.instagram.com/pranav8289/" target="_blank"><img src="Music_website/insta_logo.png" alt="Instagram"></a>
+                        <a href="https://www.facebook.com/pranav.kshirsagar.716/" target="_blank"><img src="Music_website/fb_logo.png" alt="Facebook"></a>
+                    </ul>
+                </div>
+            </footer>
         </div>
     </div>
+    <div class="bottom" id="hideBottom">
+        <img alt="" id="masterSongCover">
+        <div id="masterSongName"></div>
+        <img src="img/playing.gif" alt="" id="gif">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fa-solid fa-xl fa-backward-step" id="previous"></i>
+            <i class="fa-solid fa-2xl fa-circle-play" id="masterPlay"></i>
+            <i class="fa-solid fa-xl fa-forward-step" id="next"></i>
+        </div>
+        <div class="progressBarContent">
+            <span id="masterSongProgressDuration"></span>
+            <input type="range" name="range" id="myProgressBar" value="0" step="0.1">
+            <span id="masterSongDuration"></span>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/7485876171.js" crossorigin="anonymous"></script>
 </body>
 <script src="script.js"></script>
 
