--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Tune</title>
     <link rel="icon" href="Music_website/logo.png" type="image/icon type">
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="search.css">
 </head>
 <meta name="color-scheme" content="dark light">
 
@@ -57,91 +57,65 @@
             </div>
         </div>
         <div class="body" id="home">
-            <div class="Home-body">
-                <div id="greeting">Good Morning</div>
+            <div class="search-body">
+                <div class="searchbar">
+                    <input type="text" id="search-bar" placeholder="Search..." onclick="search()">
+                    <div id="searchresults"></div>
+                </div>
+                <div class="title">
+                    <h1>All Albums</h1>
+                </div>
                 <div class="songlist1">
                     <div class="song-img1" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/alluarjun.jpg" alt="song1">
-                        <h3>Allu Arjun song</h3>
+                        <img src="Music_website/Marathi.png" alt="song1">
                     </div>
                     <div class="song-img2" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/Govyachya-Kinaryav.jpg" alt="song2">
-                        <h3>Govyachya-Kinaryav song</h3>
+                        <img src="Music_website/HindiSong.jpg" alt="song2">
                     </div>
                     <div class="song-img3" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/sahahrukhkhan.jpg" alt="song3">
-                        <h3>Arman Malik song</h3>
+                        <img src="Music_website/punjabisong.png" alt="song3">
                     </div>
                     <div class="song-img4" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/Darshanraval.jpg" alt="song4">
-                        <h3>Darshan Raval song</h3>
+                        <img src="Music_website/Tamil.png" alt="song4">
                     </div>
                     <div class="song-img5" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/arjitsingh.jpg" alt="song5">
-                        <h3>Arjit Singh song</h3>
+                        <img src="Music_website/Telugu.png" alt="song5">
                     </div>
                 </div>
                 <div class="songlist2">
                     <div class="song-img6">
-                        <img src="Music_website/song6.jpg" alt="song6">
-                        <li><a href="song6.php">Song6</a></li>
+                        <img src="Music_website/K-pop.png" alt="song6">
                     </div>
                     <div class="song-img7">
-                        <img src="Music_website/song7.jpg" alt="song7">
-                        <li><a href="song7.php">Song7</a></li>
+                        <img src="Music_website/pop.png" alt="song7">
                     </div>
                     <div class="song-img8">
-                        <img src="Music_website/song8.jpg" alt="song8">
-                        <li><a href="song8.php">Song8</a></li>
+                        <img src="Music_website/classical.png" alt="song8">
                     </div>
                     <div class="song-img9">
-                        <img src="Music_website/song9.jpg" alt="song9">
-                        <li><a href="song9.php">Song9</a></li>
-                    </div>
-                    <div class="song-img10">
-                        <img src="Music_website/song10.jpg" alt="song10">
-                        <li><a href="song10.php">Song10</a></li>
+                        <img src="Music_website/devotional.png" alt="song9">
                     </div>
                 </div>
-                <footer class="footer">
-                    <div class="footer-container">
-                        <ul class="inline-list">
-                            <a href="Home.php">Web Development</a>
-                            <a href="Search.php">Development</a>
-                            <a href="Add.php">Hosting</a>
-                        </ul>
-                        <ul class="social-icon">
-                            <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/" target="_blank"><img
-                                    src="Music_website/twitter_logo.png" alt="Twitter"></a>
-                            <a href="https://www.instagram.com/pranav8289/" target="_blank"><img
-                                    src="Music_website/insta_logo.png" alt="Instagram"></a>
-                            <a href="https://www.facebook.com/pranav.kshirsagar.716/" target="_blank"><img
-                                    src="Music_website/fb_logo.png" alt="Facebook"></a>
-                        </ul>
-                    </div>
-                </footer>
             </div>
-            <div class="search-body">
-            </div>
+            <footer class="footer">
+                <div class="footer-container">
+                    <ul class="inline-list">
+                        <a href="Home.php">Web Development</a>
+                        <a href="Search.php">Development</a>
+                        <a href="Add.php">Hosting</a>
+                    </ul>
+                    <ul class="social-icon">
+                        <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/" target="_blank"><img
+                                src="Music_website/twitter_logo.png" alt="Twitter"></a>
+                        <a href="https://www.instagram.com/pranav8289/" target="_blank"><img
+                                src="Music_website/insta_logo.png" alt="Instagram"></a>
+                        <a href="https://www.facebook.com/pranav.kshirsagar.716/" target="_blank"><img
+                                src="Music_website/fb_logo.png" alt="Facebook"></a>
+                    </ul>
+                </div>
+            </footer>
         </div>
     </div>
-    <div class="bottom" id="hideBottom">
-        <img alt="" id="masterSongCover">
-        <div id="masterSongName"></div>
-        <img src="img/playing.gif" alt="" id="gif">
-        <div class="icons">
-            <!-- fontawesome icons -->
-            <i class="fa-solid fa-xl fa-backward-step" id="previous"></i>
-            <i class="fa-solid fa-2xl fa-circle-play" id="masterPlay"></i>
-            <i class="fa-solid fa-xl fa-forward-step" id="next"></i>
-        </div>
-        <div class="progressBarContent">
-            <span id="masterSongProgressDuration"></span>
-            <input type="range" name="range" id="myProgressBar" value="0" step="0.1">
-            <span id="masterSongDuration"></span>
-        </div>
-    </div>
-
     <script src="https://kit.fontawesome.com/7485876171.js" crossorigin="anonymous"></script>
 </body>
 <script src="script.js"></script>
