some changes are needed

--- a/Home.html
+++ b/Home.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Tune</title>
-    <link rel="icon" href="Music_website/logo.png" type="image/icon type">
+    <link rel="icon" href="img/logo.png" type="image/icon type">
     <link rel="stylesheet" href="Home.css">
 </head>
 <meta name="color-scheme" content="dark light">
 
 <body>
     <div class="preloader">
-        <img src="Music_website/logo.png" alt="PrimeTuneLogo">
+        <img src="img/logo.png" alt="PrimeTuneLogo">
         <h1>PrimeTune</h1>
     </div>
     <div class="container">
         <div class="main">
             <div class="Home">
                 <div class="Home-img">
-                    <img src="Music_website/HomeLogo.png" alt="homelogo" herf="Home.php">
+                    <img src="img/HomeLogo.png" alt="homelogo" herf="Home.php">
                     <li><a href="Home.html">Home</a></li>
                 </div>
                 <div class="Search-img" id="search">
-                    <img src="Music_website/SearchLogo.png" alt="searchlogo" herf="Home.php">
+                    <img src="img/SearchLogo.png" alt="searchlogo" herf="Home.php">
                     <li><a href="search.html">Search</a></li>
                 </div>
             </div>
             <div class="library">
                 <div class="library-img">
-                    <img src="Music_website/librarylogo.jpg" alt="librarylogo">
+                    <img src="img/librarylogo.jpg" alt="librarylogo">
                     <li>Library</li>
                     <li><a herf="Add.php">+</a></li>
                 </div>
@@ -61,46 +61,30 @@
                 <div id="greeting">Good Morning</div>
                 <div class="songlist1">
                     <div class="song-img1" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/alluarjun.jpg" alt="song1">
+                        <img src="Music_website/Pushpa.png" alt="song1">
                         <h3>Allu Arjun song</h3>
                     </div>
                     <div class="song-img2" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/Govyachya-Kinaryav.jpg" alt="song2">
+                        <img src="Music_website/RRR.png" alt="song2">
                         <h3>Govyachya-Kinaryav song</h3>
                     </div>
                     <div class="song-img3" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/sahahrukhkhan.jpg" alt="song3">
+                        <img src="Music_website/SR.png" alt="song3">
                         <h3>Arman Malik song</h3>
                     </div>
                     <div class="song-img4" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/Darshanraval.jpg" alt="song4">
+                        <img src="Music_website/Sarrainodu.png" alt="song4">
                         <h3>Darshan Raval song</h3>
-                    </div>
-                    <div class="song-img5" onclick="nevigateAlbum(this)">
-                        <img src="Music_website/arjitsingh.jpg" alt="song5">
-                        <h3>Arjit Singh song</h3>
                     </div>
                 </div>
                 <div class="songlist2">
-                    <div class="song-img6">
-                        <img src="Music_website/song6.jpg" alt="song6">
-                        <li><a href="song6.php">Song6</a></li>
+                    <div class="song-img5" onclick="nevigateAlbum(this)">
+                        <img src="Music_website/KGF2.png" alt="song5">
+                        <h3>Arjit Singh song</h3>
                     </div>
-                    <div class="song-img7">
-                        <img src="Music_website/song7.jpg" alt="song7">
-                        <li><a href="song7.php">Song7</a></li>
-                    </div>
-                    <div class="song-img8">
-                        <img src="Music_website/song8.jpg" alt="song8">
-                        <li><a href="song8.php">Song8</a></li>
-                    </div>
-                    <div class="song-img9">
-                        <img src="Music_website/song9.jpg" alt="song9">
-                        <li><a href="song9.php">Song9</a></li>
-                    </div>
-                    <div class="song-img10">
-                        <img src="Music_website/song10.jpg" alt="song10">
-                        <li><a href="song10.php">Song10</a></li>
+                    <div class="song-img6" onclick="nevigateAlbum(this)">
+                        <img src="Music_website/AVPL.png" alt="song5">
+                        <h3>Arjit Singh song</h3>
                     </div>
                 </div>
                 <footer class="footer">
@@ -112,11 +96,11 @@
                         </ul>
                         <ul class="social-icon">
                             <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/" target="_blank"><img
-                                    src="Music_website/twitter_logo.png" alt="Twitter"></a>
+                                    src="img/twitter_logo.png" alt="Twitter"></a>
                             <a href="https://www.instagram.com/pranav8289/" target="_blank"><img
-                                    src="Music_website/insta_logo.png" alt="Instagram"></a>
+                                    src="img/insta_logo.png" alt="Instagram"></a>
                             <a href="https://www.facebook.com/pranav.kshirsagar.716/" target="_blank"><img
-                                    src="Music_website/fb_logo.png" alt="Facebook"></a>
+                                    src="img/fb_logo.png" alt="Facebook"></a>
                         </ul>
                     </div>
                 </footer>
