--- a/search.html
+++ b/search.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Tune</title>
-    <link rel="icon" href="Music_website/logo.png" type="image/icon type">
+    <link rel="icon" href="img/logo.png" type="image/icon type">
     <link rel="stylesheet" href="search.css">
 </head>
 <meta name="color-scheme" content="dark light">
 
 <body>
     <div class="preloader">
-        <img src="Music_website/logo.png" alt="PrimeTuneLogo">
+        <img src="img/logo.png" alt="PrimeTuneLogo">
         <h1>PrimeTune</h1>
     </div>
     <div class="container">
         <div class="main">
             <div class="Home">
                 <div class="Home-img">
-                    <img src="Music_website/HomeLogo.png" alt="homelogo" herf="Home.php">
+                    <img src="img/HomeLogo.png" alt="homelogo" herf="Home.php">
                     <li><a href="Home.html">Home</a></li>
                 </div>
                 <div class="Search-img" id="search">
-                    <img src="Music_website/SearchLogo.png" alt="searchlogo" herf="Home.php">
+                    <img src="img/SearchLogo.png" alt="searchlogo" herf="Home.php">
                     <li><a href="search.html">Search</a></li>
                 </div>
             </div>
             <div class="library">
                 <div class="library-img">
-                    <img src="Music_website/librarylogo.jpg" alt="librarylogo">
+                    <img src="img/librarylogo.jpg" alt="librarylogo">
                     <li>Library</li>
                     <li><a herf="Add.php">+</a></li>
                 </div>
@@ -106,11 +106,11 @@
                     </ul>
                     <ul class="social-icon">
                         <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/" target="_blank"><img
-                                src="Music_website/twitter_logo.png" alt="Twitter"></a>
+                                src="img/twitter_logo.png" alt="Twitter"></a>
                         <a href="https://www.instagram.com/pranav8289/" target="_blank"><img
-                                src="Music_website/insta_logo.png" alt="Instagram"></a>
+                                src="img/insta_logo.png" alt="Instagram"></a>
                         <a href="https://www.facebook.com/pranav.kshirsagar.716/" target="_blank"><img
-                                src="Music_website/fb_logo.png" alt="Facebook"></a>
+                                src="img/fb_logo.png" alt="Facebook"></a>
                     </ul>
                 </div>
             </footer>
